--- a/pool-spa/sass/media.sass
+++ b/pool-spa/sass/media.sass
@@ -11,8 +11,8 @@ $text_black: #1c1d1e
             font-size: 0px
             margin-left: 20px
             & + &
-                margin-left: 80px
-            img
+                margin-left: 45px
+            svg
                 margin-right: 0px
 
     .logo
@@ -57,8 +57,6 @@ $text_black: #1c1d1e
         width: auto
         flex-grow: 1
         margin: 0px 40px 0px 0px
-            
-    
 
 @media screen and ( max-width: 1590px )
     .header
@@ -81,6 +79,9 @@ $text_black: #1c1d1e
             display: none
         &__main
             background-color: $main_blue
+        &__button
+            svg
+                fill: #fff
 
     .nav
         &__link
@@ -88,6 +89,8 @@ $text_black: #1c1d1e
 
     .search
         background-color: transparent
+        &__button svg
+            fill: #fff
 
     .logo
         &__img
@@ -108,8 +111,6 @@ $text_black: #1c1d1e
             grid-template-columns: 1fr
         &__body
             max-width: none
-        &__swiper
-            display: none
         &__products
             justify-items: center
             grid-template-columns: repeat(auto-fill, minmax(260px, 1fr))
@@ -186,7 +187,7 @@ $text_black: #1c1d1e
     .burger
         display: inline-block
     
-    .nav
+    .header .nav
         display: none
 
     .sales
@@ -208,9 +209,39 @@ $text_black: #1c1d1e
             justify-items: center
             grid-gap: 20px
     
+    .videos
+        &__body
+            grid-template-columns: repeat(2, 1fr)
+            grid-gap: 20px
+
     .brand
         width: 100%
         max-width: 300px
+
+    .technologies
+        &__img
+            height: 150px
+        &__body
+            padding: 15px
+        &__title
+            margin-bottom: 10px
+
+    .variants
+        &__container
+            grid-template-columns: repeat(2, 1fr)
+
+    .slider
+        &__thumb
+            height: 40px
+            width: 40px
+
+    .product
+        &__content
+            flex-direction: column
+            align-items: center
+        &__preview
+            margin-bottom: 20px
+            margin-right: 0
 
 @media screen and ( max-width: 998px )
 
@@ -280,24 +311,36 @@ $text_black: #1c1d1e
             padding-left: 0
             padding-right: 0
         iframe
-            position: relative
+            position: relative !important
             min-height: 400px
 
     .table
         border-top: none
+        &__head
+            margin-bottom: 60px
         &__head &__col
+            border-top: none
             padding: 0
         &__row
-            border-top: 1px solid #dcdcdc
             grid-template-columns: repeat(2, 1fr)
-            &:nth-child(1)
-                border-top: none
-            &:not(:nth-child(1)) .table__col
-                grid-row: 2 / 3
-                border-top: none
-                border-left: none
-                &:nth-child(1)
-                    grid-row: 1 / 2
+        .table
+            &__row
+                &:not(:nth-child(1)) 
+                    border-top: 1px solid #dcdcdc
+                .table__col
+                    grid-row: 2 / 3
+                    border-top: none
+                    border-left: none
+                    &:nth-child(1)
+                        grid-row: 1 / 2
+
+    .technologies
+        &__title, &__title *
+            font-size: 18px
+        &__text
+            font-size: 14px
+        &__container
+            grid-template-columns: repeat(2, 1fr)
 
 @media screen and ( max-width: 890px )
 
@@ -380,7 +423,16 @@ $text_black: #1c1d1e
                 grid-column: 1 / 3
         &__title
             font-size: 16px
-                
+
+@media screen and ( max-width: 780px )
+    .total
+        &__social
+            max-width: 270px
+
+    .product
+        &__body
+            grid-template-columns: repeat(1, 1fr)
+
 @media screen and ( max-width: 720px )
     .index-catalog
         &__container
@@ -419,6 +471,19 @@ $text_black: #1c1d1e
             font-size: 22px
         &__body
             padding: 15px 20px
+
+    .variants
+        &__name
+            font-size: 12px
+        &__price
+            font-size: 14px
+        &__frame
+            height: 80px
+            width: 80px
+        &__item
+            padding-right: 25px
+        &__container
+            grid-template-columns: repeat(1, 1fr)
 
 @media screen and ( max-width: 690px )
     .popular
@@ -463,9 +528,10 @@ $text_black: #1c1d1e
         .popular__frame
             margin-right: 0
             margin-bottom: 15px
-        .compare__head
-            padding: 10px 30px 40px 10px
-            flex-direction: column
+        &__head
+            .compare__head
+                padding: 10px 30px 40px 10px
+                flex-direction: column
 
 @media screen and ( max-width: 650px )
 
@@ -488,6 +554,21 @@ $text_black: #1c1d1e
             width: 30px
             svg
                 max-width: 15px
+
+    .complectation
+        &__body
+            flex-direction: column
+            padding: 10px 0px
+        &__item
+            padding: 10px 20px
+            font-size: 12px
+            &::before
+                left: 12px
+        &__list
+            flex-basis: auto
+            width: 100%
+            & + &
+                margin-left: 0
 
     .form
         &__subtitle
@@ -642,7 +723,19 @@ $text_black: #1c1d1e
     .footer
         &__copyright
             font-size: 12px
-         
+    
+    .swiper-wrapper
+        .arrival
+            &__item
+                max-width: none
+                .button.button_transparent-black
+                    padding: 12px
+                    width: 80%
+                    flex-shrink: 0
+        &.arrival__container
+            display: flex
+            grid-gap: unset
+
 @media screen and ( max-width: 560px )
     .main
         margin-top: 50px
@@ -658,15 +751,57 @@ $text_black: #1c1d1e
         &__title
             font-size: 18px
 
+    .container
+        padding: 0px 15px
+
     .header
+        &__search
+            z-index: 10
+            top: 0
+            left: 0
+            width: 100%
+            height: 100vh
+            padding: 15px 0px
+            &-wrap
+                display: flex
+                flex-direction: column
+                position: relative
+            .search
+                margin-top: 20px
         &__buttons
             margin-left: 10px
         &__button
+            height: 20px
+            width: 20px
+            svg
+                max-height: 20px
+            &::after
+                content: ''
+                height: 7px
+                width: 7px
+                top: 0
+                right: -13px !important
             & + &
-                margin-left: 10px
+                margin-right: 10px
+
+    .search__button
+        height: 20px
+        width: 20px
+
+    .search
+        
+        max-width: none
+        width: 100%
+        &__close
+            display: inline-block
 
     .burger
         margin-left: 10px
+        height: 30px
+        width: 30px
+        span, &::before, &::after
+            width: 25px
+            background-color: #fff
 
     .popular
         &__wrapper
@@ -702,11 +837,36 @@ $text_black: #1c1d1e
                     height: 70px
                     width: 70px
 
+    .table
+        &__head
+            .compare__head 
+                padding: 10px 30px 60px 10px
+                .arrival__item-cart
+                    right: auto
+                    left: 10px
+
+    .videos__body
+        grid-template-columns: repeat(1, 1fr)
+
     .footer
         &__wrap
             grid-template-columns: 1fr
 
 @media screen and ( max-width: 470px )
+
+    .product
+        &__content
+            min-width: 0
+            padding: 10px
+        &__preview
+            width: 100%
+        &__title
+            font-size: 18px
+            margin-bottom: 15px
+
+    .slider
+        padding: 20px 20px 35px
+        min-width: auto
 
     .catalog
         &__promo
@@ -735,6 +895,13 @@ $text_black: #1c1d1e
                     font-size: 12px
                     margin-top: 3px
 
+    .technologies
+        &__title, &__title *
+            font-size: 14px
+        &__text
+            font-size: 12px
+        &__container
+            grid-template-columns: repeat(1, 1fr)
 
     .contacts
         &__form
@@ -870,13 +1037,21 @@ $text_black: #1c1d1e
             padding: 7px 0px
 
     .table
-        .compare__head
-            padding: 10px 20px 40px 10px
+        &__head .compare__head
+            padding: 10px 10px 60px
+        &__head .arrival__item-price, &__head .compare__head-name
+            font-size: 12px
         &__head &__col
             padding: 0 !important
         &__head .arrival__item-cart
             height: 20px
             width: 20px
+        &__row:not(:nth-child(1)) &__col:nth-child(1)
+            font-size: 14px
+            font-weight: 600
+        &__row:not(:nth-child(1)) &__col
+            font-size: 12px
+            font-weight: 400
         &__col
             padding: 5px 15px 15px
             &:first-child
