--- a/zillion/sass/style.sass
+++ b/zillion/sass/style.sass
@@ -482,13 +482,20 @@ body
     &__control
         height: 12px
         width: 34px
-        padding: 5px 0px
+        padding: 10px 0px
+        position: relative
         svg
+            position: absolute
+            top: 50%
+            left: 50%
+            transform: translate(-50%, -50%)
             fill: $main_black
+            width: 100%
+            height: auto
         & + &
             margin-left: 22px
             svg
-                transform: rotate(180deg)
+                transform: translate(-50%, -50%) rotate(180deg)
         &:hover
             svg
                 transition-duration: 0s
@@ -728,6 +735,65 @@ body
         font-weight: 600
         white-space: nowrap
 
+.preloader
+    background:#fff
+    position: fixed
+    top: 0
+    left: 0
+    width: 100%
+    height: 100vh
+    z-index: 100
+    &__loader
+        display: block
+        position: relative
+        left: 50%
+        top: 50%
+        width: 150px
+        height: 150px
+        margin: -75px 0 0 -75px
+        border-radius: 50%
+        border: 3px solid transparent
+        border-top-color: $main_yellow
+        animation: spin 2s linear infinite
+        &::before
+            content: ""
+            position: absolute
+            top: 5px
+            left: 5px
+            right: 5px
+            bottom: 5px
+            border-radius: 50%
+            border: 3px solid transparent
+            border-top-color: $main_yellow
+            animation: spin 3s linear infinite
+        &::after
+            content: ""
+            position: absolute
+            top: 15px
+            left: 15px
+            right: 15px
+            bottom: 15px
+            border-radius: 50%
+            border: 3px solid transparent
+            border-top-color: $main_yellow
+            animation: spin 1.5s linear infinite
+
+.loaded
+    &_hiding .preloader
+        opacity: 0
+        visibility: hidden
+    .preloader
+        display: none
+
+@keyframes spin
+    0%
+        transform: rotate(0deg)
+        transform: rotate(0deg)
+
+    100%
+        transform: rotate(360deg)
+        transform: rotate(360deg)
+
 
 //
 //
@@ -742,6 +808,7 @@ body
         margin-top: 10px
         display: grid
         grid-gap: 40px
+        grid-template-rows: 430px auto
         grid-template-columns: repeat(3, 1fr)
 
 .game
@@ -753,33 +820,47 @@ body
         display: block
         border-radius: 12px
         overflow: hidden
+        position: relative
         img
             width: 100%
             height: 100%
             object-fit: cover
             transition-duration: .5s
+            position: absolute
+            top: 50%
+            left: 50%
+            transform: translate(-50%, -50%)
     &:first-of-type
         grid-column: 1 / 3
         .game
             &__img
                 height: 100%
                 max-height: 430px
+                img
+                    box-shadow: inset 0 -40px 100px 10px rgba(0, 0, 0, 0.4)
             &__body
-                bottom: 34px
-                left: 34px
+                background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000c4 100%)
+                overflow: hidden
+                border-radius: 12px
+                bottom: 0
+                left: 0
+                padding-bottom: 34px
+                padding-left: 34px
                 position: absolute
-                max-width: 460px
+                width: 100%
             &__name
                 color: #fff
                 font-weight: 800
                 font-size: 44px
                 line-height: 70px
                 margin-bottom: 0
+                max-width: 460px
             &__description
                 color: #fff
                 font-size: 20px
                 line-height: 32px
                 font-weight: 500
+                max-width: 460px
     &__body
         margin-top: 20px
     &__name
@@ -796,7 +877,7 @@ body
             &__name
                 color: $main_yellow
             &__img img
-                transform: scale(1.03)
+                transform: translate(-50%, -50%) scale(1.03)
 
 
 //
