--- a/zillion/sass/style.sass
+++ b/zillion/sass/style.sass
@@ -1170,12 +1170,17 @@ body
     border-radius: 12px
     max-width: 990px
     overflow-y: auto
-    &:not(.active)
-        position: absolute
-        transform: translateY(-50px)
-        opacity: 0
-        visibility: hidden
-        pointer-events: none
+    position: absolute
+    transform: translateY(-50px)
+    opacity: 0
+    visibility: hidden
+    pointer-events: none
+    &.active
+        position: relative
+        transform: translateY(0px)
+        opacity: 1
+        visibility: visible
+        pointer-events: all
     &__form
         margin-top: 15px
     &_request
