--- a/zillion/sass/media.sass
+++ b/zillion/sass/media.sass
@@ -162,7 +162,7 @@ $bg_white: #f8f8f8
         max-width: 95px
 
     .menu
-        opacity: 1 !important
+        display: block !important
 
     .burger
         display: inline-block
