--- a/zillion/sass/style.sass
+++ b/zillion/sass/style.sass
@@ -306,8 +306,8 @@ body
     transform: translateX(100%) rotate(-30deg)
     visibility: hidden
     pointer-events: none
-    opacity: 0
     padding: 0px 15px
+    display: none
     &::before
         transition-duration: .35s
         transition-timing-function: ease-out
@@ -742,9 +742,12 @@ body
     left: 0
     width: 100%
     height: 100vh
+    outline: none
     z-index: 100
+    transition-duration: 0s
     &__loader
         display: block
+        outline: none
         position: relative
         left: 50%
         top: 50%
@@ -755,6 +758,7 @@ body
         border: 3px solid transparent
         border-top-color: $main_yellow
         animation: spin 2s linear infinite
+        transition-duration: 0s
         &::before
             content: ""
             position: absolute
@@ -766,6 +770,7 @@ body
             border: 3px solid transparent
             border-top-color: $main_yellow
             animation: spin 3s linear infinite
+            transition-duration: 0s
         &::after
             content: ""
             position: absolute
@@ -777,9 +782,11 @@ body
             border: 3px solid transparent
             border-top-color: $main_yellow
             animation: spin 1.5s linear infinite
+            transition-duration: 0s
 
 .loaded
     &_hiding .preloader
+        transition-duration: .3s
         opacity: 0
         visibility: hidden
     .preloader
