--- a/zillion/sass/style.sass
+++ b/zillion/sass/style.sass
@@ -1257,16 +1257,20 @@ body
         left: 0
         width: 100%
         height: 100vh
-        z-index: 10
         display: flex
         align-items: center
         justify-content: center
         background-color: rgba(255, 255, 255, 0.9)
         padding: 0px 20px
-        &:not(.active)
-            opacity: 0
-            pointer-events: none
-            visibility: hidden
+        z-index: -2
+        opacity: 0
+        pointer-events: none
+        visibility: hidden
+        &.active
+            opacity: 1
+            pointer-events: all
+            visibility: visible
+            z-index: 10
     &__col
         & + &
             margin-left: 32px
