--- a/zillion/sass/style.sass
+++ b/zillion/sass/style.sass
@@ -1266,7 +1266,9 @@ body
         opacity: 0
         pointer-events: none
         visibility: hidden
+        transition-duration: 0s
         &.active
+            transition-duration: .3s
             opacity: 1
             pointer-events: all
             visibility: visible
