--- a/4seasons/css/index.css
+++ b/4seasons/css/index.css
@@ -1,5 +1,9 @@
+/* Стили свайпера */
+@import "./swiper-bundle.min.css";
+
 /* Шрифты */
 @import "./fonts.css";
+
 
 /* Десктоп стили */
 @import "./style.css";
