--- a/4seasons/sass/media.sass
+++ b/4seasons/sass/media.sass
@@ -291,6 +291,10 @@ $main_brown-hover: #ac8a48
                 width: 30px
                 height: 3px
 
+    .swiper
+        &__img
+            max-width: 100%
+
     .rates
         &__preview
             height: 220px
