--- a/4seasons/sass/style.sass
+++ b/4seasons/sass/style.sass
@@ -347,13 +347,11 @@ section
         font-size: 35px
         font-weight: 700
         color: #ffffff
-        padding: 28px 0px 28px
+        padding: 28px 20px 28px
     &__container
-        margin: 45px 0px 25px
+        margin: 45px 0px 0px
         display: flex
         justify-content: space-between
-        // justify-items: center
-        // grid-gap: 65px
 
 .benefit
     width: 100%
@@ -388,7 +386,7 @@ section
         margin-top: 40px
 
 .rates
-    padding: 35px 0px
+    padding: 0px 0px 35px
     &__header, &__footer
         margin: 0 auto
         .rates__text
@@ -482,7 +480,8 @@ section
         grid-template-rows: 2fr 1fr
         grid-template-columns: repeat(2, 1fr)
         flex-grow: 1
-        grid-gap: 15px
+        row-gap: 15px
+        column-gap: 15px
         & + &
             margin-left: 15px
         &_reverse
