--- a/4seasons/sass/style.sass
+++ b/4seasons/sass/style.sass
@@ -458,6 +458,7 @@ section
 .gallery
     padding: 25px 0px 80px
     background-color: $main_brown
+    overflow: hidden
     &>.container
         padding: 0
     &__container
