--- a/4seasons/sass/style.sass
+++ b/4seasons/sass/style.sass
@@ -251,6 +251,7 @@ section
 
 .hero
     padding: 310px 0px 160px
+    overflow: hidden
     &__bg
         position: absolute
         top: 0
@@ -509,6 +510,7 @@ section
            
 .footer
     display: flex
+    overflow: hidden
     align-items: stretch
     &__content
         flex: 0 0 100%
