--- a/4seasons/sass/style.sass
+++ b/4seasons/sass/style.sass
@@ -489,6 +489,7 @@ section
         flex-shrink: 0
         margin-top: 15px
         height: 25%
+        width: 100%
     &__col
         display: flex
         align-items: flex-start
