--- a/fujifilm/css/style.css
+++ b/fujifilm/css/style.css
@@ -1,1 +1,2 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+*,*::before,*::after{margin:0;padding:0;text-decoration:none;-webkit-box-sizing:border-box;box-sizing:border-box;-webkit-transition:all .3s ease-out 0s;transition:all .3s ease-out 0s;font-family:'Open Sans', sans-serif;border-radius:0px}html,body{overflow-x:hidden}body{min-height:100vh;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column}.header,.footer{-webkit-box-flex:0;-ms-flex-positive:0;flex-grow:0}.main{-webkit-box-flex:1;-ms-flex-positive:1;flex-grow:1}.container{max-width:1230px;padding:0px 15px;width:100%;margin:0 auto}
+/*# sourceMappingURL=style.css.map */
